--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,13 +1,7 @@
 {
-  "env": {
-    "browser": true,
-    "es2021": true
-  },
-  "extends": ["airbnb-base", "prettier"],
-  "parserOptions": {
-    "ecmaVersion": "latest",
-    "sourceType": "module"
-  },
-  "plugins": ["react"],
-  "rules": {}
+  "extends": "eslint:recommended",
+  "rules": {
+      "semi": ["error", "always"],
+      "quotes": ["error", "double"]
+  }
 }
